app/assets/stylesheets/footer.css.scss
/* Sticky footer styles
-------------------------------------------------- */

$footer-height: 100px;

html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto;
  /* Negative indent footer by its height */
  margin: 0 auto -$footer-height;
  /* Pad bottom by footer height */
  padding: 0 0 $footer-height;
}

/* Set the fixed height of the footer here */

#footer {
  height:$footer-height;
  color:white;
  background-color: rgba(36,32,33,0.9);
  font-family: 'Raleway', sans-serif;
  padding:10px 0px;
  margin-top:30px;
  font-weight:100;

}

#footer a {
  color:white;
  font-weight:100;
  font-family: 'Raleway', sans-serif;
}

.footer-header {
  font-size: 15px
}

.social-button {
  width: 32px;
}

.social a:hover {
  text-decoration: none;
}


$footer-height-mobile: 200px;
@media (max-width: 750px) {
  #footer {
    height:$footer-height-mobile;
  }

  #wrap {
    margin: 0 auto -$footer-height-mobile;
    /* Pad bottom by footer height */
    padding: 0 0 $footer-height-mobile;
  }

  #footer .social {
  margin-top:10px;
}

}

